welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: ')' expected but ';' found.
      return (estFaceMur();)
                          ^SnakeBuggle:6: error: illegal start of statement
      return (estFaceMur();)
                           ^